--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,6 @@ dependencyResolutionManagement {
 rootProject.name = "marvelPoc"
 include ':app'
 include ':core'
+include ':navigation'
+include ':characters'
+include ':detail'
