--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import org.gradle.api.initialization.resolve.RepositoriesMode
 
 buildscript {
     ext {
-        kotlin_version = '1.5.21'
+        kotlin_version = '1.4.32'
         constraint_layout_version = '2.0.1'
         picasso_version = '2.71828'
 //    glide_version = '4.12.0'
@@ -20,7 +20,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
         // NOTE: Do not place your application dependencies here; they belong
