--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gbjm.marvelpoc">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".MarvelApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MarvelPoc">
-        <activity
-            android:name="com.gbjm.core.ui.MainActivity"
+        android:theme="@style/Theme.Marvelpoc">
+
+        <activity android:name="com.gbjm.core.ui.MainActivity"
+            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <nav-graph android:value="@navigation/base_flow"/>
         </activity>
     </application>
-
 </manifest>
