--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Marvelpoc">
+        android:theme="@style/Theme.Marvelpoc"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity android:name="com.gbjm.core.ui.MainActivity"
             android:label="@string/app_name"
