added instrumental testing with Navigation tests

--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
         navigation_version = '2.3.5'
     }
     repositories {
-        google()
         mavenCentral()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
@@ -27,7 +27,12 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
 //allprojects {
 //    dependencyResolutionManagement {
 //        repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
